--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="twitter:title" content="05:13 â‡†ã…¤âšâšã…¤â–¶ï¸ â­ ðŸ”ˆâ”€â”€â”€â—â”€â”€â”€â”€â”€â”€â”€â”€â†» 36:18" />
                                       <meta property="og:description" content="05:13 â‡†ã…¤âšâšã…¤â–¶ï¸ â­ ðŸ”ˆâ”€â”€â”€â—â”€â”€â”€â”€â”€â”€â”€â”€â†» 36:18" />
 <meta property="twitter:description" content="05:13 â‡†ã…¤âšâšã…¤â–¶ï¸ â­ ðŸ”ˆâ”€â”€â”€â—â”€â”€â”€â”€â”€â”€â”€â”€â†» 36:18" />
-                                      <meta property="og:image" content="https://linkzozo.web.app/ezy.svg" />
+                                      <meta property="og:image" content="https://raw.githubusercontent.com/mahfoozali33/typeel/381a68181a4d384537d477e88325f9b2267d75ed/asssssssffdfdf.svg" />
           
 
 
